[project]
name = "hbef-2d-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "psutil>=7.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "segmentation-models-pytorch>=0.5.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "wandb>=0.25.1",
]
